--- a/scss/base/_form.scss
+++ b/scss/base/_form.scss
@@ -1,3 +1,20 @@
 //////////////////////////////////////////////////////////
 // FORM //////////////////////////////////////////////////
 //////////////////////////////////////////////////////////
+
+
+//TODO: add other form types
+input[type="text"],
+input[type="email"] {
+	display: inline-block;
+	padding: 6px 10px;
+	font-size: 14px;
+	color: #666;
+	line-height: 1.4;
+	background-color: #fff;
+	background-image: none;
+	border: 1px solid #ddd;
+	border-radius: 2px;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	transition: border-color ease-in-out .2s,box-shadow ease-in-out .25s;
+}
