--- a/index.jade
+++ b/index.jade
@@ -1,19 +1,15 @@
 div.l-home
 	header(class="l-hero" role="main")
-		div.container
-			div.logo
+		div.hero-container
 			h1.logo-text Unicorn UI
-			h2.tagline Some cool tagline goes here
+			img(class="logo" src="images/logo-placeholder.svg" alt="Logo placeholder")
+			h2.tagline Cool Tagline Will Go Here
 			section(class="clear hero-call-to-action")
-				p.hero-more-info Some more really interesting information that requires a bit more explanation goes here :)
-				div(class="newletter-group-item")
-					form(role="form")
-						fieldset.newsletter-form-group
-							h3(class="newletter-header") Newsletter
-							input(type="email" value="" placeholder="you@youremail.com" name="email" class="newsletter-email-input")
-							input(type="submit" value="Subscribe" name="subscribe" class="button button-primary button-large button-rounded")
-
-	hr.hr-beautified
+				p.hero-newsletter-blurb Subscribe to our email list to find out what new
+				p.hero-newsletter-blurb awesome modules we're planning to release!
+				form(role="newsletter-form")
+					input(class="newsletter-email" type="email" value="" placeholder="you@youremail.com" name="email")
+					input(type="submit" value="Subscribe" name="subscribe" class="cta-button button button-primary button-large button-rounded")
 
 	section.cards
 		ul.cards-list
@@ -28,8 +24,6 @@ div.l-home
 			li.book Unicorn Book Goes Here
 			li.book Unicorn Book Goes Here
 			li.book Unicorn Book Goes Here
-
-	hr.hr-beautified
 
 footer.footer
 	h2.about-us About Unicorn UI
