Fixed form margin top and role

--- a/index.jade
+++ b/index.jade
@@ -7,9 +7,9 @@ div.l-home
 			section(class="clear hero-call-to-action")
 				p.hero-newsletter-blurb Subscribe to our email list to find out what new
 				p.hero-newsletter-blurb awesome modules we're planning to release!
-				form(role="newsletter-form")
+				form(class="newsletter-form" role="form")
 					input(class="newsletter-email" type="email" value="" placeholder="you@youremail.com" name="email")
-					input(type="submit" value="Subscribe" name="subscribe" class="cta-button button button-primary button-large button-rounded")
+					input(type="submit" value="Subscribe" name="subscribe" class="newsletter-button button button-primary button-large button-rounded")
 
 	section.cards
 		ul.cards-list
