--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -34,6 +34,10 @@ $buttonsPrimaryColor: #00a1cb;
 	margin-top: 3.2rem;
 }
 
+.newsletter-form {
+	margin-top: 1.5rem;
+}
+
 .newsletter-email {
 	width: 25rem;
 }
