Added buttons as vendor WIP .. more hero tweaks

--- a/index.jade
+++ b/index.jade
@@ -9,7 +9,7 @@ div.l-home
 				p.hero-newsletter-blurb awesome modules we're planning to release!
 				form(class="newsletter-form" role="form")
 					input(class="newsletter-email" type="email" value="" placeholder="you@youremail.com" name="email")
-					input(type="submit" value="Subscribe" name="subscribe" class="newsletter-button button button-primary button-large button-rounded")
+					a(href="#" class="newsletter-button button button-primary button-rounded") Subscribe
 
 	section.cards
 		ul.cards-list
