--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 1.6em;
 	line-height: 1.4;
 	color: #333;
