tweaks that I'm not even positive are better :)

--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -28,6 +28,7 @@ $buttonsPrimaryColor: #00a1cb;
 
 .tagline {
 	font-size: 3.2rem;
+	text-shadow: 0px 1px 1px rgba(50, 50, 50, .1);
 }
 
 .hero-call-to-action {
