--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -10,6 +10,7 @@ body {
 	font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 1.6em;
 	line-height: 1.4;
+	-webkit-font-smoothing: antialiased;
 	color: #333;
 	background-color: #fff;
 }
