--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -96,10 +96,10 @@ hr {
   padding: 0;
 }
 
-input[type="submit"], input[type="button"], button {
-  padding: 0 !important;
-  margin: 0 !important;
-}
+// input[type="submit"], input[type="button"], button {
+//   padding: 0 !important;
+//   margin: 0 !important;
+// }
 
 input, select, a img {
   vertical-align: middle;
