Added my placedholder for books.

--- a/index.jade
+++ b/index.jade
@@ -29,9 +29,12 @@ div.l-home
 
 	section.books
 		ul.books-list
-			li.book Unicorn Book Goes Here
-			li.book Unicorn Book Goes Here
-			li.book Unicorn Book Goes Here
+			li.book
+				img(class="book" src="images/book-cover.png" alt="Book Cover")
+			li.book
+				img(class="book" src="images/book-cover.png" alt="Book Cover")
+			li.book
+				img(class="book" src="images/book-cover.png" alt="Book Cover")
 
 footer.footer
 	h2.about-us About Unicorn UI
