--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -2,7 +2,7 @@ doctype
 html
   head
     link(rel="stylesheet" href="css/libs/vendor.css")
-    link(rel="stylesheet" href="css/style.css")
+    link(rel="stylesheet" href="css/site.css")
   body
     != yield
 
