--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -2,7 +2,11 @@ doctype
 html
   head
     link(rel="stylesheet" href="css/libs/vendor.css")
+    link(rel="stylesheet" href="fonts/icomoon/style.css")
     link(rel="stylesheet" href="css/site.css")
+    script(src="//use.typekit.net/tpn3thx.js")
+    script(type='text/javascript').
+      try{Typekit.load();}catch(e){}
   body
     != yield
 
