--- a/resources/scss/_theme.scss
+++ b/resources/scss/_theme.scss
@@ -1,11 +1,56 @@
+.background-mantle {
+  background: linear-gradient(90deg, #24C6DC 10%, #514A9D 90%);
+}
+
+
 /*
 * Background Shapes
 *
 */
 
+/*
+* Arrow Module
+*
+*/
+.arrow {
+  position: absolute;
+  z-index: $layer-1;
+  font-size: 681px;
+  height: 680px;
+  width: 2310px;
+}
+
+/*
+* Arrow Type
+*
+*/
+.arrow-top-left {
+  top: 0px;
+  right: 0px;
+}
+.arrow-top-right {
+  top: 0px;
+  left: 0px;
+}
+.arrow-bottom-left {
+  bottom: 0px;
+  right: 0px;
+}
+.arrow-bottom-right {
+  bottom: 0px;
+  left: 0px;
+}
+
 .background-arrow-top-left {
-  background: url('../images/arrows/white-arrows-left.png') left -200px no-repeat;
+  background: url('../images/white-arrows-left.png') left -200px no-repeat;
 }
 .background-arrow-top-right {
-  background: url('../images/arrows/white-arrows-right.png') right -200px no-repeat;
+  background: url('../images/white-arrows-right.png') right -200px no-repeat;
+}
+.background-arrow-bottom-right {
+  background: url('../images/white-arrows-right.png') right 0px no-repeat;
+}
+
+.background-arrow-bottom-left {
+  background: url('../images/white-arrows-left.png') left 0px no-repeat;
 }
