--- a/public/index.jade
+++ b/public/index.jade
@@ -13,5 +13,5 @@ header(class="hero background-mantle" role="main")
 				input(type="text" class="is-hidden" name="b_8d64dfb6a9a561029375e03a8_b5db98a4bb" tabindex="-1" value="")
 
 footer.footer
-	h2.about-us About Unicorn UI
+	h2.about-us Unicorn UI
 	p Copyright &copy; 2014 Unicorn-UI
