--- a/resources/scss/module/_form.scss
+++ b/resources/scss/module/_form.scss
@@ -9,11 +9,12 @@
   .field {
     border-radius: 3px 0px 0px 3px;
     display: inline-block;
+    border: 1px solid transparent;
   }
 
   .button {
     padding: 0px 20px;
-    height: 40px;
+    height: 41px;
     border: none;
     border-radius: 0px 3px 3px 0px;
   }
