--- a/public/index.jade
+++ b/public/index.jade
@@ -9,7 +9,7 @@ header(class="hero background-mantle" role="main")
 			form(action="//unicorn-ui.us9.list-manage.com/subscribe/post?u=8d64dfb6a9a561029375e03a8&amp;id=b5db98a4bb" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate newsletter-form" role="form" target="_blank" novalidate)
 				.field-connected
 					input(type="email" value="" name="EMAIL" class="field" id="mce-EMAIL" placeholder="you@example.com")
-					input(type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button-royal button-raised")
+					input(type="submit" value="Let's do this!" name="subscribe" id="mc-embedded-subscribe" class="button button-royal button-raised")
 				input(type="text" class="is-hidden" name="b_8d64dfb6a9a561029375e03a8_b5db98a4bb" tabindex="-1" value="")
 
 footer.footer
