Fixes bug where the input was completely white.

--- a/resources/scss/_options.scss
+++ b/resources/scss/_options.scss
@@ -10,6 +10,7 @@ $brand-font: "proxima-nova", Helvetica, Verdana, Arial, "Lucida Grande", sans-se
 */
 $white: #FFFFFF;
 $black: #000000;
+$lightBlack: #333333;
 $gray: #a9adb1;
 $light: #e8edf2;
 $alice: #229ffd;
