--- a/public/_partials/builder/instructions.jade
+++ b/public/_partials/builder/instructions.jade
@@ -8,10 +8,12 @@ article.instructions
       ol.steps
         li
           a(class="download button button-rounded button-flat-primary button-tiny" href="#")
-            i.fa.fa-download Download Buttons a  and add files to your website.
+            i.fa.fa-download Download Buttons
+          |  a and add files to your website.
 
         li  Add css in the head of your webpage.
-          pre class="prettyprint linenums" &lt;link href=&quot;//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css&quot; rel=&quot;stylesheet&quot;&gt;
+          pre.prettyprint.linenums
+            &lt;link href=&quot;//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css&quot; rel=&quot;stylesheet&quot;&gt;
             &lt;link rel=&quot;stylesheet&quot; href=&quot;css/buttons.css&quot;&gt;
 
             &lt;script src=&quot;http://code.jquery.com/jquery-1.10.1.min.js&quot;&gt;&lt;/script&gt;
@@ -29,7 +31,8 @@ article.instructions
       ol.steps
           li
             a(class="button button-rounded button-flat-action button-tiny" href="https://github.com/unicorn-ui/Buttons/")
-             i.fa.fa-github Fork or Download a  the Buttons project on github.
+             i.fa.fa-github Fork or Download
+            |   a the Buttons project on github.
           li Make sure you have <a target="_blank" href="http://sass-lang.com/download.html"> Sass</a>  and <a target="_blank" href="http://compass-style.org/install/"> Compass</a>  installed.
           li Edit the _options.scss with your own custom values
           li In the root of the Buttons directory type strong compass watch strong  on the command line.
