--- a/resources/scss/module/builder/_nav.scss
+++ b/resources/scss/module/builder/_nav.scss
@@ -79,6 +79,7 @@ $nav-toggle-knob: #5e6e81;
                 text-align: center;
                 font-family: $nav-logo-font;
                 font-weight: normal;
+                font-size: 21px;
                 padding: 0px;
                 text-decoration: none;
                 display: block;
