--- a/resources/scss/module/builder/_code.scss
+++ b/resources/scss/module/builder/_code.scss
@@ -27,6 +27,10 @@ $showcase-font-family: "Helvetica Neue Light", "Helvetica Neue", Helvetica, Aria
     //EXAMPLE
     #{$showcase-namespace}-examples {
         padding: 30px;
+
+        .button {
+            margin: 5px;
+        }
     }
 
     //CODE
