--- a/resources/scss/module/builder/_hero.scss
+++ b/resources/scss/module/builder/_hero.scss
@@ -84,6 +84,7 @@ $hero-subtitle-color: #bdc3c7;
                 border: 1px solid #CCC;
                 font-size: 12px;
                 padding: 0px;
+                margin: 0px;
                 text-transform: uppercase;
                 width: 120px;
             }
