--- a/public/_partials/builder/buttons-border.jade
+++ b/public/_partials/builder/buttons-border.jade
@@ -1,12 +1,11 @@
 section(id="border" class="showcase" data-type="build" data-name="border")
   h3 Border Buttons
 
-  section.showcase-examples
-    a(href="#" class="button button-border") press me
-    a(href="#" class="button button-border-primary button-rounded") press me
-    a(href="#" class="button button-border-action button-pill") press me
-    a(href="#" class="button button-border-highlight button-circle") press me
-    a(href="#" class="button button-border-caution")
-      i.fa.fa-camera press me
-    a(href="#" class="button button-border-royal button-pill") press me
+  section.showcase-examples.
+    <a href="#" class="button button-border">press me</a>
+    <a href="#" class="button button-border-primary button-rounded">press me</a>
+    <a href="#" class="button button-border-action button-pill">press me</a>
+    <a href="#" class="button button-border-highlight button-circle">press me</a>
+    <a href="#" class="button button-border-caution"><i class="fa fa-camera"></i> press me</a>
+    <a href="#" class="button button-border-royal button-pill">press me</a>
   code
