--- a/public/_partials/builder/buttons-dropdown.jade
+++ b/public/_partials/builder/buttons-dropdown.jade
@@ -1,70 +1,68 @@
 section(id="dropdown" class="showcase" data-type="build" data-name="dropdown")
   h3 Dropdown Buttons
 
-  section.showcase-examples
-    span(class="button-dropdown" data-buttons="dropdown")
-      a(href="#" class="button button-rounded") press me <i class="fa fa-caret-down"></i>
+  section.showcase-examples.
+    <span class="button-dropdown" data-buttons="dropdown">
+      <a href="#" class="button button-rounded"> press me <i class="fa fa-caret-down"></i></a>
 
-      ul
-        li
-          a(href="#") Option 1
-        li
-          a(href="#") Option 2
-        li.button-dropdown-divider
-          a(href="#") Option 3
+      <ul>
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      </ul>
+    </span>
 
-    span(class="button-dropdown" data-buttons="dropdown")
-      a(href="#" class="button button-rounded button-flat-primary") press me <i class="fa fa-caret-down"></i>
+    <span class="button-dropdown" data-buttons="dropdown">
+      <a href="#" class="button button-rounded button-flat-primary"> press me <i class="fa fa-caret-down"></i></a>
 
-      ul.button-dropdown-menu-below
-        li
-          a(href="#") Option 1
-        li
-          a(href="#") Option 2
-        li.button-dropdown-divider
-          a(href="#") Option 3
+      <ul class="button-dropdown-menu-below">
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      </ul>
+    </span>
 
-    span(class="button-dropdown" data-buttons="dropdown")
-      a(href="#" class="button button-rounded button-flat-action") press me <i class="fa fa-caret-down"></i>
+    <span class="button-dropdown" data-buttons="dropdown">
+      <a href="#" class="button button-rounded button-flat-action"> press me <i class="fa fa-caret-down"></i></a>
 
-      ul class="button-dropdown-menu-above"
-        li
-          a(href="#") Option 1
-        li
-          a(href="#") Option 2
-        li.button-dropdown-divider
-          a(href="#") Option 3
+      <ul class="button-dropdown-menu-above">
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      </ul>
+    </span>
 
-    span(class="button-dropdown" data-buttons="dropdown")
-      a(href="#" class="button button-highlight button-rounded") press me <i class="fa fa-caret-down"></i>
+    <span class="button-dropdown" data-buttons="dropdown">
+      <a href="#" class="button button-highlight button-rounded">
+        press me <i class="fa fa-caret-down"></i>
+      </a>
 
-      ul
-        li
-          a(href="#") Option 1
-        li
-          a(href="#") Option 2
-        li.button-dropdown-divider
-          a(href="#") Option 3
+      <ul>
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      </ul>
+    </span>
 
-    span(class="button-dropdown" data-buttons="dropdown")
-      a(href="#" class="button button-caution button-pill") press me <i class="fa fa-caret-down"></i>
+    <span class="button-dropdown" data-buttons="dropdown">
+      <a href="#" class="button button-caution button-pill"> press me <i class="fa fa-caret-down"></i></a>
 
-      ul
-        li
-          a(href="#") Option 1
-        li
-          a(href="#") Option 2
-        li.button-dropdown-divider
-          a(href="#") Option 3
+      <ul>
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      </ul>
+    </span>
 
-    span(class="button-dropdown" data-buttons="dropdown")
-      a(href="#" class="button button-rounded button-royal") press me <i class="fa fa-caret-down"></i>
+    <span class="button-dropdown" data-buttons="dropdown">
+      <a href="#" class="button button-royal button-rounded">
+        <i class="fa fa-envelope"></i> press me <i class="fa fa-caret-down"></i>
+      </a>
 
-      ul
-        li
-          a(href="#") Option 1
-        li
-          a(href="#") Option 2
-        li.button-dropdown-divider
-          a(href="#") Option 3
+      <ul>
+        <li><a href="#">Option 1</a></li>
+        <li><a href="#">Option 2</a></li>
+        <li class="button-dropdown-divider"><a href="#">Option 3</a></li>
+      </ul>
+    </span>
   code
