--- a/public/_partials/builder/buttons-form.jade
+++ b/public/_partials/builder/buttons-form.jade
@@ -1,15 +1,13 @@
 section(id="form" class="showcase" data-example="example" data-name="form")
   h3 Button Form Elements h3
 
-  section.showcase-examples
-    input(type="submit" value="press me" class="button button-pill button-primary")
-    button.button.button-pill.button-primary press me
+  section.showcase-examples.
+    <input type="submit" value="press me" class="button button-pill button-primary"/>
+    <button class="button button-pill button-primary">press me</button>
 
     <!-- DISABLED BUTTONS -->
-    input(disabled type="submit"  value="press me" class="button button-pill button-primary")
-    button(disabled class="button  button-pill button-primary") press me button
-    button(disabled class="button button-pill button-flat-primary") press me button
-    a(href="#" class="button disabled button-pill button-primary ") press me
+    <input  disabled type="submit"  value="press me" class="button button-pill button-primary"/>
+    <button disabled class="button  button-pill button-primary">press me</button>
+    <button disabled class="button button-pill button-flat-primary">press me</button>
+    <a href="#" class="button disabled button-pill button-primary ">press me</a>
   code
-
-
