--- a/public/_partials/builder/buttons-pill.jade
+++ b/public/_partials/builder/buttons-pill.jade
@@ -1,11 +1,11 @@
 section(id="pill" class="showcase" data-type="build" data-name="pill")
   h3 Pill Buttons
 
-  section.showcase-examples
-    a(href="#" class="button button-pill") press me
-    a(href="#" class="button button-pill button-primary") press me
-    a(href="#" class="button button-pill button-action") press me
-    a(href="#" class="button button-pill button-highlight") press me
-    a(href="#" class="button button-pill button-caution") press me
-    a(href="#" class="button button-pill button-royal") press me
+  section.showcase-examples.
+    <a href="#" class="button button-pill">press me</a>
+    <a href="#" class="button button-pill button-primary">press me</a>
+    <a href="#" class="button button-pill button-action">press me</a>
+    <a href="#" class="button button-pill button-highlight">press me</a>
+    <a href="#" class="button button-pill button-caution">press me</a>
+    <a href="#" class="button button-pill button-royal">press me</a>
   code
