--- a/public/_partials/builder/buttons-wrappers.jade
+++ b/public/_partials/builder/buttons-wrappers.jade
@@ -1,13 +1,9 @@
 section(id="wrappers" class="showcase" data-type="example" data-name="wrappers")
   h3 Button Wrappers
 
-  section.showcase-examples
-    span.button-wrap
-      a(href="#" class="button button-circle") press me
-    span.button-wrap
-      a(href="#" class="button button-circle button-primary") press me
-    span.button-wrap
-      a(href="#" class="button button-pill ") press me
-    span.button-wrap
-      a(href="#" class="button button-pill button-primary") press me
+  section.showcase-examples.
+    <span class="button-wrap"><a href="#" class="button button-circle">press me</a></span>
+    <span class="button-wrap"><a href="#" class="button button-circle button-primary">press me</a></span>
+    <span class="button-wrap"><a href="#" class="button button-pill ">press me</a></span>
+    <span class="button-wrap"><a href="#" class="button button-pill button-primary">press me</a></span>
   code
