--- a/public/_partials/builder/instructions.jade
+++ b/public/_partials/builder/instructions.jade
@@ -40,7 +40,8 @@ article.instructions
 
 
   section.instruction-block.form
-    h3 Buttons 2.0 is coming soon! h3
+    h3
+      i.fa Buttons 2.0 is coming soon!
     ul
       li
         form(action="//github.us9.list-manage.com/subscribe/post?u=8d64dfb6a9a561029375e03a8&amp;id=04d53dbcbd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form validate" target="_blank" novalidate)
