--- a/public/_partials/builder/buttons-3d.jade
+++ b/public/_partials/builder/buttons-3d.jade
@@ -1,12 +1,11 @@
 section(id="3d" class="showcase" data-type="build" data-name="3d")
   h3 3D Buttons
 
-  section.showcase-examples
-    a(href="#" class="button button-rounded ") press me
-    a(href="#" class="button button-rounded button-3d-primary") press me
-    a(href="#" class="button button-pill button-3d-action") press me
-    a(href="#" class="button button-circle button-3d-highlight") press me
-    a(href="#" class="button button-rounded button-3d-caution")
-      i.fa.fa-camera press me
-    a(href="#" class="button button-rounded button-3d-royal") press me
-    code
+  section.showcase-examples.
+    <a href="#" class="button button-3d">press me</a>
+    <a href="#" class="button button-3d-primary button-rounded">press me</a>
+    <a href="#" class="button button-3d-action button-pill">press me</a>
+    <a href="#" class="button button-3d-highlight button-circle">press me</a>
+    <a href="#" class="button button-3d-caution"><i class="fa fa-camera"></i> press me</a>
+    <a href="#" class="button button-3d-royal button-rounded">press me</a>
+  code
