--- a/public/_partials/builder/buttons-icons.jade
+++ b/public/_partials/builder/buttons-icons.jade
@@ -1,17 +1,11 @@
 section(id="icon" class="showcase" data-type="example" data-name="icon")
   h3 Icon Buttons
 
-  section.showcase-examples
-    a(href="#" class="button button-rounded button-flat")
-      i.fa.fa-github press me
-    a(href="#" class="button button-rounded button-flat-primary")
-      i.fa.fa-refresh press me
-    a(href="#" class="button button-rounded button-flat-action")
-      i.fa.fa-cloud press me
-    a(href="#" class="button button-rounded button-flat-highlight")
-      i.fa.fa-camera press me
-    a(href="#" class="button button-rounded button-flat-caution")
-      i.fa.fa-code press me
-    a(href="#" class="button button-rounded button-flat-royal")
-      i.fa.fa-envelope press me
+  section.showcase-examples.
+    <a href="#" class="button button-rounded button-flat"><i class="fa fa-github"></i> press me</a>
+    <a href="#" class="button button-rounded button-flat-primary"><i class="fa fa-refresh"></i> press me</a>
+    <a href="#" class="button button-rounded button-flat-action"><i class="fa fa-cloud"></i> press me</a>
+    <a href="#" class="button button-rounded button-flat-highlight"><i class="fa fa-camera"></i> press me</a>
+    <a href="#" class="button button-rounded button-flat-caution"><i class="fa fa-code"></i> press me</a>
+    <a href="#" class="button button-rounded button-flat-royal"><i class="fa fa-envelope"></i> press me</a>
   code
