--- a/public/_partials/builder/buttons-rounded.jade
+++ b/public/_partials/builder/buttons-rounded.jade
@@ -1,11 +1,12 @@
 section(id="rounded" class="showcase" data-type="build" data-name="rounded")
   h3 Rounded Buttons
 
-  section.showcase-examples
-    a(href="#" class="button button-rounded ") press me
-    a(href="#" class="button button-rounded button-primary") press me
-    a(href="#" class="button button-rounded button-action") press me
-    a(href="#" class="button button-rounded button-highlight") press me
-    a(href="#" class="button button-rounded button-caution") press me
-    a(href="#" class="button button-rounded button-royal") press me
-    code
+  section.showcase-examples.
+    <a href="#" class="button button-rounded">press me</a>
+    <a href="#" class="button button-rounded button-primary">press me</a>
+    <a href="#" class="button button-rounded button-action">press me</a>
+    <a href="#" class="button button-rounded button-highlight">press me</a>
+    <a href="#" class="button button-rounded button-caution">press me</a>
+    <a href="#" class="button button-rounded button-royal">press me</a>
+
+  code
