--- a/public/_partials/builder/hero.jade
+++ b/public/_partials/builder/hero.jade
@@ -31,7 +31,7 @@ header(class="hero" id="home")
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
 
-      div(class="fb-like" data-href="http://github.com/alexwolfe/Buttons" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false")
+      div(class="fb-like" data-href="http://unicorn-ui.com/buttons/builder/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false")
 
       iframe(class="github-button" src="http://ghbtns.com/github-btn.html?user=alexwolfe&repo=Buttons&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20")
       iframe(class="github-button" src="http://ghbtns.com/github-btn.html?user=alexwolfe&repo=Buttons&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20")
@@ -47,6 +47,6 @@ header(class="hero" id="home")
           return window.twttr || (t = { _e: [], ready: function (f) { t._e.push(f) } });
           }(document, "script", "twitter-wjs"));
 
-      a(href="https://twitter.com/share" class="twitter-share-button" data-url="https://github.com/alexwolfe/Buttons" data-text="Buttons - a customizable CSS button library built with Sass &amp; Compass") Tweet
+      a(href="https://twitter.com/share" class="twitter-share-button" data-url="http://unicorn-ui.com/buttons/builder/" data-text="Buttons - a customizable CSS button library built with Sass &amp; Compass") Tweet
       script(type="text/javascript").
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
