--- a/public/buttons/builder/_layout.jade
+++ b/public/buttons/builder/_layout.jade
@@ -6,6 +6,10 @@ html
     meta(name="description" content="A highly customizable CSS Buttons framework built with Sass and Compass. The Buttons framework is ready to use and easy to customize")
     meta(name="viewport" content="width=device-width")
 
+    // FAVICON
+    link(type="image/png" href="/images/buttons/favicon.ico")
+
+
     // CSS FILES
     link(href='http://fonts.googleapis.com/css?family=Cherry+Swash:400,700' rel='stylesheet' type='text/css')
     link(href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet")
