fixes floating 'sticky footer' on web site.

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -7,7 +7,8 @@ html
     script(src="//use.typekit.net/tpn3thx.js")
     script(type='text/javascript').
       try{Typekit.load();}catch(e){}
-  body
+  body(class="background-mantle")
+
     != yield
 
     script(src="js/libs/vendor.js")
