--- a/public/index.jade
+++ b/public/index.jade
@@ -1,6 +1,6 @@
-header(class="hero background-mantle" role="main")
+header(class="hero" role="main")
 	h1.animated.fadeIn Unicorn UI
-	h2.animated.fadeIn A highly customizable production ready UI library for the web.
+	h2.animated.fadeIn A highly customizable and production ready UI library for the web.
 
 	.clear.hero-call-to-action
 		p.hero-newsletter-blurb Learn about new UI libraries and other great resources.
