--- a/resources/scss/module/_hero.scss
+++ b/resources/scss/module/_hero.scss
@@ -1,7 +1,13 @@
 .hero {
+  // height: 100%;
   padding: 180px 40px;
   text-align: center;
   color: $white;
+
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   h1 {
     font-weight: 100;
