--- a/resources/scss/_base.scss
+++ b/resources/scss/_base.scss
@@ -1,5 +1,12 @@
+html {
+	height: 100%;
+}
+
 body {
+	height:100%;
+	min-height: 100%;
   font-family: $brand-font;
+  position: relative;
 }
 
 .clear {
