--- a/public/blog/index.jade
+++ b/public/blog/index.jade
@@ -1,1 +1,6 @@
-p hello
+h1 The blog
+
+footer
+  h3 A Unicorn UI Module
+  p Unicorn is created by <a target="_blank" href="https://twitter.com/alexwolfe">@alexwolfe</a>  &amp; <a target="_blank" href="https://twitter.com/roblevintennis">@roblevintennis</a>.
+  p Licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>
